--- a/css/banner.css
+++ b/css/banner.css
@@ -67,11 +67,15 @@
 }
 
 .letter:nth-child(2) {
-    margin-right: 0.3em;
+    margin-right: 0.15em;
 }
 
-.letter:nth-child(7) {
-    margin-right: 0.3em;
+.letter:nth-child(6) {
+    margin-right: 0.15em;
+}
+
+.letter:nth-child(8) {
+    margin-right: 0.15em;
 }
 
 .letter:nth-child(1) {
@@ -118,6 +122,19 @@
     animation-delay: 1.1s;
 }
 
+.letter:nth-child(12) {
+    animation-delay: 1.2s;
+}
+
+.letter:nth-child(13) {
+    animation-delay: 1.3s;
+}
+
+.letter:nth-child(14) {
+    animation-delay: 1.4s;
+}
+
+
 .scroll-indicator {
     position: absolute;
     bottom: 40px;
@@ -131,7 +148,7 @@
     display: block;
     width: 26px;
     height: 44px;
-    border: 2px solid #000000;
+    border: 2px solid rgba(135, 187, 137, 0.5);
     border-radius: 50px;
     position: relative;
 }
@@ -143,7 +160,7 @@
     left: 50%;
     width: 4px;
     height: 4px;
-    background: #000000;
+    background: rgba(135, 187, 137, 0.5);
     border-radius: 50%;
     transform: translateX(-50%);
     animation: scroll 2s infinite;
